udagram-app.yaml
## starter code
#Parameters:
## whatever you consider a changing value, put it as a parameter instead of hard-coding it into your script
#Resources:
#  #instace profile contains the Iam Role name(s) that we want to associate to our auto scaling EC2 Servers
#  ProfileWithRolesForOurApp:
#    Type: AWS::IAM::InstanceProfile
#    Properties: 
#      Roles:
#        - UdacityS3ReadOnlyEC2
#  
#          #!/bin/bash
#          apt-get update -y
#          apt-get install unzip awscli -y
#          apt-get install apache2 -y
#          systemctl start apache2.service
#          cd /var/www/html
#          aws s3 cp s3://udacity-demo-1/udacity.zip .
#          unzip -o udacity.zip
#  Outputs: 
#  #Bonus points for useful outputs!## Challenge 2 in Udacity DevOps NanoDegree

Parameters:
  EnvName: 
    Type: String
    Default: udagram-app
  Infra:
    Type: String
    Default: udagram-infra
  VpcCidr: 
    Type: String
    Default: 10.0.0.0/16
  PubSub1Cidr: 
    Type: String
    Default: 10.0.1.0/24
  PubSub2Cidr: 
    Type: String
    Default: 10.0.2.0/24
  PriSub1Cidr: 
    Type: String
    Default: 10.0.3.0/24
  PriSub2Cidr: 
    Type: String
    Default: 10.0.4.0/24
  ImageId:
    Type: String
    Default: ami-09a56048b08f94cdf
  InstanceType:
    Type: String
    Default: t2.micro

Resources:
  WebAppSg:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Web Application security group allowing 80,443 
      VpcId: 
        Fn::ImportValue:
          !Sub ${Infra}-VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0     
      SecurityGroupEgress :
      - IpProtocol: tcp   
        FromPort: 0  
        ToPort: 65535 
        CidrIp: 0.0.0.0/0 
  
  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: LoadBalancer Security Group allowing 80,443
      VpcId: 
        Fn::ImportValue:
          !Sub ${Infra}-VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress :
      - IpProtocol: tcp   
        FromPort: 0  
        ToPort: 65535 
        CidrIp: 0.0.0.0/0 
  LC:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo apt-get update -y
          apt-get install unzip awscli -y
          sudo apt-get install apache2 -y
          sudo systemctl start apache2.service          
          cd /var/www/html
          aws s3 cp s3://udacity-demo-1/udacity.zip .
          unzip -o udacity.zip      
      ImageId: !Ref ImageId
      KeyName: deyaa-Think
      IamInstanceProfile: !Ref InstanceProfile
      SecurityGroups:
      - Ref: WebAppSg
      InstanceType: !Ref InstanceType
      BlockDeviceMappings:
      - DeviceName: "/dev/sdb"
        Ebs:
          VolumeSize: '10'
        
  ASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
      - 
        Fn::ImportValue:
          !Sub ${Infra}-PubSub1
      - 
        Fn::ImportValue:
          !Sub ${Infra}-PriSub2
      Cooldown: 180
      HealthCheckGracePeriod: 0
      LaunchConfigurationName: !Ref LC
      Tags:
      - Key: Name
        Value: !Sub ${EnvName}-ASG
        PropagateAtLaunch: true
      TargetGroupARNs:
      - !Ref ALBTG
      MaxSize: 3
      MinSize: 2
      #MetricsCollection:
      #- Granularity: "1Minute"
      #  Metrics:
      #  - GroupInServiceInstances
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      SecurityGroups: 
        - !Ref ALBSG
      Subnets: 
        - Fn::ImportValue:
            !Sub ${Infra}-PubSub1
        - Fn::ImportValue:
            !Sub ${Infra}-PubSub2
      Tags: 
        - Key: Name
          Value: !Sub ${EnvName}-ALB
      Type: application

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties: 
      DefaultActions: 
      - Type: "forward"
      #  ForwardConfig:
      #    Protocol: "HTTP"
      #    Port: 80
      #    Host: "#{host}"
      #    Path: "/#{path}"
      #    Query: "#{query}"
      #    StatusCode: "HTTP_301"    
        TargetGroupArn: !Ref ALBTG  
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
      #SslPolicy: String

  ALBListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties: 
      Actions: 
        - Type: forward
          TargetGroupArn: !Ref ALBTG
      Conditions:
        - Field: path-pattern
          Values: [/]
      ListenerArn: !Ref ALBListener
      Priority: 1        

  ALBTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties: 
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckIntervalSeconds: 5
      HealthCheckTimeoutSeconds: 3
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Port: 80
      Protocol: HTTP
      VpcId: 
        Fn::ImportValue:
          !Sub ${Infra}-VpcId
      TargetGroupAttributes: 
        - Key: deregistration_delay.timeout_seconds
          Value: 120
        - Key: stickiness.enabled
          Value: true
      Tags: 
        - Key: Name
          Value: !Sub ${EnvName}-TG

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    #DependsOn: ALB      
    Properties:
      InstanceProfileName: instanceS3profile
      Path: /
      Roles:
        - !Ref IamRole

  IamRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub ${EnvName}-IamRole
      Description: Iam Role Allowing EC2 instance to use S3 bucket
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      MaxSessionDuration: 3600
  
  RolePolicies:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: ReadS3
      Roles: 
      - !Ref IamRole
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action: 's3:GetObject'
            Resource: 'arn:aws:s3:::udacity-demo-1/udacity.zip'

Outputs:
  ALB:
    Value:  !Join [ "", [ 'http://', !GetAtt ALB.DNSName]]
    Export:
      Name: !Sub ${EnvName}-ALB

  #Instance:
  #  Type: AWS::EC2::Instance
  #  Properties: 
  #    ImageId: !Ref ImageId
  #    InstanceType: !Ref InstanceType
  #    KeyName: deyaa-Think
  #    LaunchTemplate: 
  #      LaunchTemplateId: !Ref LT
  #      Version: !GetAtt LT.LatestVersionNumber
  #    #NetworkInterfaces: 
  #    #  - DeviceIndex: 0
  #    #    AssociatePublicIpAddress: true
  #    #    DeleteOnTermination: true
  #    #    #GroupSet:
  #    #    # - !Ref WebAppSg
  #        SubnetId: 
  #          Fn::ImportValue: !Sub ${Infra}-PriSub1 
  #    #SecurityGroupIds: 
  #    #  - String
  #    UserData:
  #      Fn::Base64: !Sub |
  #          #!/bin/bash
  #          apt-get update -y
  #          apt-get install unzip awscli -y
  #          apt-get install apache2 -y
  #          systemctl start apache2.service
  #          cd /var/www/html
  #          aws s3 cp s3://udacity-demo-1/udacity.zip .
  #          unzip -o udacity.zip
  #    #Volumes: 
      #  - Volume
  #LT:
  #  Type: AWS::EC2::LaunchTemplate
  #  Properties: 
  #    LaunchTemplateName: !Sub ${EnvName}-LT
  #    LaunchTemplateData: 
  #      IamInstanceProfile: 
  #        Name: !Ref InstanceProfile
  #      ImageId: !Ref ImageId
  #      InstanceType: !Ref InstanceType
  #      KeyName: deyaa-Think
  #      #NetworkInterfaces: 
  #      #  - DeviceIndex: 0
        #    AssociatePublicIpAddress: true
        #    DeleteOnTermination: true
        #    Groups:
        #     - !Ref WebAppSg
        #     - !Ref ALBSG
        #    SubnetId: 
        #      Fn::ImportValue: !Sub ${Infra}-PubSub1 
        #  - DeviceIndex: 1
        #    AssociatePublicIpAddress: true
        #    DeleteOnTermination: true
        #    Groups:
        #     - !Ref WebAppSg
        #     - !Ref ALBSG
        #    SubnetId: 
        #      Fn::ImportValue: !Sub ${Infra}-PubSub2 
        #  - DeviceIndex: 2
        #    AssociatePublicIpAddress: true
        #    DeleteOnTermination: true
        #    Groups:
        #     - !Ref WebAppSg
        #     - !Ref ALBSG
        #    SubnetId: 
        #      Fn::ImportValue: !Sub ${Infra}-PriSub1 
        #  - DeviceIndex: 3
        #    AssociatePublicIpAddress: true
        #    DeleteOnTermination: true
        #    Groups:
        #      - !Ref WebAppSg
        #      - !Ref ALBSG
        #    SubnetId: 
        #      Fn::ImportValue: !Sub ${Infra}-PriSub2 
        #SecurityGroupIds: 
        #  - !Ref WebAppSg
        #TagSpecifications: 
        #  - ResourceType: instance
        #    Tags:
        #      Key: Name
        #      Value: !Ref EnvName
        #    #PropagateAtLaunch: true
        #  - ResourceType: volume
        #    Tags:
        #      Key: Name
        #      Value: !Ref EnvName
        #    #PropagateAtLaunch: true
        #UserData: 
        #  Fn::Base64: !Sub |
        #    #!/bin/bash
        #    apt-get update -y
        #    apt-get install unzip awscli -y
        #    apt-get install apache2 -y
        #    systemctl start apache2.service
        #    cd /var/www/html
        #    aws s3 cp s3://udacity-demo-1/udacity.zip .
        #    unzip -o udacity.zip

  
  

  #ASP1:
  #  Type: AWS::AutoScaling::ScalingPolicy
  #  Properties: 
  #    AdjustmentType: ChangeInCapacity
  #    AutoScalingGroupName: !Ref ASG
  #    EstimatedInstanceWarmup: 240
  #    PolicyType: TargetTrackingScaling
  #    ScalingAdjustment: 1
  #    TargetTrackingConfiguration: 
  #      PredefinedMetricSpecification:
  #        PredefinedMetricType: ASGAverageCPUUtilization
  #      TargetValue: 60
  #ASP2:
  #  Type: AWS::AutoScaling::ScalingPolicy
  #  Properties: 
  #    AdjustmentType: ChangeInCapacity
  #    AutoScalingGroupName: !Ref ASG
  #    EstimatedInstanceWarmup: 240
  #    PolicyType: TargetTrackingScaling
  #    ScalingAdjustment: 2
  #    TargetTrackingConfiguration: 
  #      PredefinedMetricSpecification:
  #        PredefinedMetricType: ASGAverageCPUUtilization
  #      TargetValue: 80
  #1ASP:
  #  Type: AWS::AutoScaling::ScalingPolicy
  #  Properties: 
  #    AdjustmentType: ChangeInCapacity
  #    AutoScalingGroupName: !Ref ASG
  #    EstimatedInstanceWarmup: 180
  #    PolicyType: TargetTrackingScaling
  #    ScalingAdjustment: -1
  #    TargetTrackingConfiguration: 
  #      PredefinedMetricSpecification:
  #        PredefinedMetricType: ASGAverageCPUUtilization
  #      TargetValue: 30
  #2ASP:
  #  Type: AWS::AutoScaling::ScalingPolicy
  #  Properties: 
  #    AdjustmentType: ChangeInCapacity
  #    AutoScalingGroupName: !Ref ASG
  #    EstimatedInstanceWarmup: 180
  #    PolicyType: TargetTrackingScaling
  #    ScalingAdjustment: -2
  #    TargetTrackingConfiguration: 
  #      PredefinedMetricSpecification:
  #        PredefinedMetricType: ASGAverageCPUUtilization
  #      TargetValue: 15
